--- a/Monitoring-Task/V1.1/ReadMe-Solution.V1.1
+++ b/Monitoring-Task/V1.1/ReadMe-Solution.V1.1
@@ -18,4 +18,4 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:8080']
 
-#you will find the #prometheus.yml File in the repo
+#you will find the prometheus.yml File in the repo
